Added css ids for different objects

--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
       </tr>
       <tr>
         <td>Thirst Status</td>
+        <td id="thirst"></td>
       </tr>
       </tr>
         <td>Hunger Status</td>
+        <td id="hunger"></td>
       </tr>
       </tr>
         <td>Receipt Status</td>
+        <td id="receipts"></td>
       </tr>
       <tr>
         <td>Treasure Status</td>
+        <td id ="treasures"></td>
       </tr>
     </table>
 
