Created a 'status' method that will run each time an action happens

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
         <td>Thirst Status</td>
         <td id="thirst"></td>
       </tr>
+      <tr>
+        <td>Work Status</td>
+        <td id="work"></td>
       </tr>
+      <tr>
+        <td>Horde Status</td>
+        <td id ="horde"></td>
+      </tr>
+      <tr>
         <td>Hunger Status</td>
         <td id="hunger"></td>
       </tr>
@@ -30,13 +38,11 @@
         <td>Receipt Status</td>
         <td id="receipts"></td>
       </tr>
-      <tr>
-        <td>Treasure Status</td>
-        <td id ="treasures"></td>
-      </tr>
+
     </table>
 
     <h3>Score</h3>
+      <span id="score"></span>
 
     <h2>Click any of the below buttons to take action on the ship</h2>
 
