All methods for spaceship actions now work

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     </table>
 
-    <h3>Score</h3>
-      <span id="score"></span>
+    <h3>Score:</h3>
+    <span id="score">0</span>
 
     <h2>Click any of the below buttons to take action on the ship</h2>
 
@@ -50,4 +50,4 @@
     <button id="eat">Eat</button>
     <button id="deliver">Deliver a package</button>
     <button id="account">Do some accounting</button>
-    <button id="horde">Steal treasure</button>
+    <button id="steal">Steal treasure</button>
