Added case for ending game

--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@
       </h3>
     <table>
       <tr>
-        <th>Thing To Watch Out For</th>
-        <th>Current Status</th>
+        <th>Status of Ship</th>
+        <th>Current Level</th>
       </tr>
       <tr>
-        <td>Thirst Status</td>
+        <td>Thirst</td>
         <td id="thirst"></td>
       </tr>
       <tr>
-        <td>Work Status</td>
+        <td>Work</td>
         <td id="work"></td>
       </tr>
       <tr>
-        <td>Horde Status</td>
+        <td>Horde</td>
         <td id ="horde"></td>
       </tr>
       <tr>
-        <td>Hunger Status</td>
+        <td>Hunger</td>
         <td id="hunger"></td>
       </tr>
       </tr>
-        <td>Receipt Status</td>
+        <td>Receipt</td>
         <td id="receipts"></td>
       </tr>
 
